--- a/Pwn/Format-string/Dockerfile
+++ b/Pwn/Format-string/Dockerfile
@@ -1,11 +1,12 @@
 FROM ubuntu:20.04
 
-# Open port 1088
-EXPOSE 1088
-
+# Open port 4500
+EXPOSE 4500
+# architecture 32bit
+RUN dpkg --add-architecture i386
 # update
 RUN apt-get update -y
-
+RUN apt-get install libc6:i386 libncurses5:i386 libstdc++6:i386
 # install socat
 RUN apt-get install socat wget -y
 
@@ -26,4 +27,4 @@ RUN chmod 700 /usr/bin/* /bin/* /tmp /dev/shm
 RUN chmod 755 /bin/dash /bin/sh /bin/cat /usr/bin/id /bin/ls
 
 # Run Program
-CMD socat TCP-LISTEN:1088,reuseaddr,fork EXEC:./chall
+CMD socat TCP-LISTEN:4500,reuseaddr,fork EXEC:./chall
